// Copyright 2020 The golang.design Initiative authors.
// All rights reserved. Use of this source code is governed by
// a GNU GPL-3.0 license that can be found in the LICENSE file.

syntax = "proto3";

option go_package = ".;proto";

package proto;

service Midgard {
    rpc Ping(PingInput) returns (PingOutput) {}
    rpc AllocateURL(AllocateURLInput) returns (AllocateURLOutput) {}
    rpc CreateNews(CreateNewsInput) returns (CreateNewsOutput) {}
    rpc CodeToImage(CodeToImageInput) returns (CodeToImageOutput) {}
}

message PingInput {}
message PingOutput {
    string Version = 1;
    string GoVersion = 2;
    string BuildTime = 3;
}

message AllocateURLInput {
    string DesiredPath = 1;
    string SourcePath = 2;
}

message AllocateURLOutput {
    string URL = 1;
    string Message = 2;
}

message CreateNewsInput {
    string Date = 1;
    string Title = 2;
    string Body = 3;
}
message CreateNewsOutput {
    string Message = 1;
}

message CodeToImageInput {
    string CodePath = 1;
}

message CodeToImageOutput {
    string CodeURL = 1;
    string ImageURL = 2;
}